# pulumi-sdm

./: .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  README.md
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pierskarsenbarg_pulumi_sdm/: README.md  __init__.py  _inputs.py  _utilities.py  account.py  account_attachment.py  account_group.py  approval_workflow.py  approval_workflow_approval.py  approval_workflow_approver.py  approval_workflow_step.py  connector.py  get_account.py  get_account_attachment.py  get_account_group.py  get_approval_workflow.py  get_approval_workflow_approver.py  get_approval_workflow_step.py  get_connector.py  get_group.py  get_group_role.py  get_identity_alias.py  get_identity_set.py  get_managed_secret.py  get_node.py  get_org_url_info.py  get_peering_group.py  get_peering_group_node.py  get_peering_group_peer.py  get_peering_group_resource.py  get_policy.py  get_proxy_cluster_key.py  get_rdp_ca_pubkey.py  get_remote_identity.py  get_remote_identity_group.py  get_resource.py  get_role.py  get_secret_engine.py  get_secret_store.py  get_ssh_ca_pubkey.py  (+27 more)
sdk/python/pulumi_sdm/: README.md  __init__.py  _inputs.py  _utilities.py  account.py  account_attachment.py  account_grant.py  get_account.py  get_account_attachment.py  get_account_grant.py  get_node.py  get_remote_identity.py  get_remote_identity_group.py  get_resource.py  get_role.py  get_role_attachment.py  get_role_grant.py  get_secret_store.py  get_ssh_ca_pubkey.py  node.py  outputs.py  provider.py  remote_identity.py  resource.py  role.py  role_attachment.py  (+2 more)
(+971 files in other folders)
