[project]
  name = "pierskarsenbarg_pulumi_sdm"
  description = "A Pulumi package for creating and managing StrongDM cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "sdm", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.34.8+dirty"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/pierskarsenbarg/pulumi-sdm"
    Repository = "https://github.com/pierskarsenbarg/pulumi-sdm"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pierskarsenbarg_pulumi_sdm = ["py.typed", "pulumi-plugin.json"]
